--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       <nav>
         <ul>
           <li><a href="./index.html">Web Studio</a></li>
-          <li><a href=""></a>Студия</li>
-          <li><a href=""></a>Портфолио</li>
-          <li><a href=""></a>Контакты</li>
+          <li><a href="#"></a>Студия</li>
+          <li><a href="#"></a>Портфолио</li>
+          <li><a href="#"></a>Контакты</li>
         </ul>
       </nav>
       <ul>
