--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <header>
       <nav>
         <ul>
-          <li><a href="./index.html">Web Studio</a></li>
+          <li>
+            <a href="./index.html"><span lang="en">Web Studio</span></a>
+          </li>
           <li><a href=""></a>Студия</li>
           <li><a href=""></a>Портфолио</li>
           <li><a href=""></a>Контакты</li>
@@ -172,7 +174,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">Web Studio</a>
+      <a href="./index.html"><span lang="en">Web Studio</span></a>
       <address>
         <ul>
           <li>
