Исправил язык читалки

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
           <li>
             <a href="./index.html"><span lang="en">Web Studio</span></a>
           </li>
-          <li><a href=""></a>Студия</li>
-          <li><a href=""></a>Портфолио</li>
-          <li><a href=""></a>Контакты</li>
+          <li><a href="#"></a>Студия</li>
+          <li><a href="#"></a>Портфолио</li>
+          <li><a href="#"></a>Контакты</li>
         </ul>
       </nav>
       <ul>
@@ -103,10 +103,10 @@
             <h3>Николай Кучеренко</h3>
             <p>Product Designer</p>
             <ul>
-              <li><a href="#" aria-label="Instagram"></a></li>
-              <li><a href="#" aria-label="Twitter"></a></li>
-              <li><a href="#" aria-label="Facebook"></a></li>
-              <li><a href="#" aria-label="LinkedIn"></a></li>
+              <li><a href="#" aria-label="Ссылка на инстаграм"></a></li>
+              <li><a href="#" aria-label="Ссылка на твиттер"></a></li>
+              <li><a href="#" aria-label="Ссылка на фейсбук"></a></li>
+              <li><a href="#" aria-label="Ссылка на линкедин"></a></li>
             </ul>
           </li>
           <li>
@@ -119,10 +119,10 @@
             <h3>Ольга Иванова</h3>
             <p>Frontend Developer</p>
             <ul>
-              <li><a href="#" aria-label="Instagram"></a></li>
-              <li><a href="#" aria-label="Twitter"></a></li>
-              <li><a href="#" aria-label="Facebook"></a></li>
-              <li><a href="#" aria-label="LinkedIn"></a></li>
+              <li><a href="#" aria-label="Ссылка на инстаграм"></a></li>
+              <li><a href="#" aria-label="Ссылка на твиттер"></a></li>
+              <li><a href="#" aria-label="Ссылка на фейсбук"></a></li>
+              <li><a href="#" aria-label="Ссылка на линкедин"></a></li>
             </ul>
           </li>
           <li>
@@ -135,10 +135,10 @@
             <h3>Андрей Шевченко</h3>
             <p>Marketing</p>
             <ul>
-              <li><a href="#" aria-label="Instagram"></a></li>
-              <li><a href="#" aria-label="Twitter"></a></li>
-              <li><a href="#" aria-label="Facebook"></a></li>
-              <li><a href="#" aria-label="LinkedIn"></a></li>
+              <li><a href="#" aria-label="Ссылка на инстаграм"></a></li>
+              <li><a href="#" aria-label="Ссылка на твиттер"></a></li>
+              <li><a href="#" aria-label="Ссылка на фейсбук"></a></li>
+              <li><a href="#" aria-label="Ссылка на линкедин"></a></li>
             </ul>
           </li>
           <li>
@@ -151,10 +151,10 @@
             <h3>Иван Николаев</h3>
             <p>UI Designer</p>
             <ul>
-              <li><a href="#" aria-label="Instagram"></a></li>
-              <li><a href="#" aria-label="Twitter"></a></li>
-              <li><a href="#" aria-label="Facebook"></a></li>
-              <li><a href="#" aria-label="LinkedIn"></a></li>
+              <li><a href="#" aria-label="Ссылка на инстаграм"></a></li>
+              <li><a href="#" aria-label="Ссылка на твиттер"></a></li>
+              <li><a href="#" aria-label="Ссылка на фейсбук"></a></li>
+              <li><a href="#" aria-label="Ссылка на линкедин"></a></li>
             </ul>
           </li>
         </ul>
@@ -164,12 +164,12 @@
       <section>
         <h2>Постоянные клиенты</h2>
         <ul>
-          <li><a href="" aria-label="клиент ya & co"></a></li>
-          <li><a href="" aria-label="клиент company tagline here"></a></li>
-          <li><a href="" aria-label="клиент company"></a></li>
-          <li><a href="" aria-label="клиент foster peters"></a></li>
-          <li><a href="" aria-label="клиент brand"></a></li>
-          <li><a href="" aria-label="клиент company tag line"></a></li>
+          <li><a href="" aria-label="клиент я и ко"></a></li>
+          <li><a href="" aria-label="клиент компани таглайн хиа"></a></li>
+          <li><a href="" aria-label="клиент компани"></a></li>
+          <li><a href="" aria-label="клиент фостер петерс"></a></li>
+          <li><a href="" aria-label="клиент брэнд"></a></li>
+          <li><a href="" aria-label="клиент компани таг лайн"></a></li>
         </ul>
       </section>
     </main>
@@ -188,10 +188,10 @@
       </address>
       <b>присоединяйтесь</b>
       <ul>
-        <li><a href="#" aria-label="Instagram"></a></li>
-        <li><a href="#" aria-label="Twitter"></a></li>
-        <li><a href="#" aria-label="Facebook"></a></li>
-        <li><a href="#" aria-label="LinkedIn"></a></li>
+        <li><a href="#" aria-label="Ссылка на инстаграм"></a></li>
+        <li><a href="#" aria-label="Ссылка на твиттер"></a></li>
+        <li><a href="#" aria-label="Ссылка на фейсбук"></a></li>
+        <li><a href="#" aria-label="Ссылка на линкедин"></a></li>
       </ul>
     </footer>
   </body>
