--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Web Studio</title>
   </head>
   <body>
+    <!-- Шапка -->
     <header>
       <nav>
         <ul>
@@ -17,10 +18,12 @@
           <li><a href="#"></a>Контакты</li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
       <!--Герой-->
@@ -173,6 +176,7 @@
         </ul>
       </section>
     </main>
+    <!-- Подвал -->
     <footer>
       <a href="./index.html"><span lang="en">Web Studio</span></a>
       <address>
