Добавил размеры картинок в секцию Чем мы занимаемся

--- a/index.html
+++ b/index.html
@@ -73,19 +73,31 @@
         <ul>
           <li>
             <a href="#"
-              ><img src="./img/desk.jpg" alt="Десктопные приложения"
+              ><img
+                src="./img/desk.jpg"
+                alt="Десктопные приложения"
+                width="370"
+                height="294"
             /></a>
             <p>Десктопные приложения</p>
           </li>
           <li>
             <a href="#"
-              ><img src="./img/phone.jpg" alt="Мобильные приложения"
+              ><img
+                src="./img/phone.jpg"
+                alt="Мобильные приложения"
+                width="370"
+                height="294"
             /></a>
             <p>Мобильные приложения</p>
           </li>
           <li>
             <a href="#"
-              ><img src="./img/disine.jpg" alt="Дизайнерские решения"
+              ><img
+                src="./img/disine.jpg"
+                alt="Дизайнерские решения"
+                width="370"
+                height="294"
             /></a>
             <p>Дизайнерские решения</p>
           </li>
