--- a/index.html
+++ b/index.html
@@ -179,12 +179,12 @@
       <section>
         <h2>Постоянные клиенты</h2>
         <ul>
-          <li><a href="" aria-label="клиент я и ко"></a></li>
-          <li><a href="" aria-label="клиент компани таглайн хиа"></a></li>
-          <li><a href="" aria-label="клиент компани"></a></li>
-          <li><a href="" aria-label="клиент фостер петерс"></a></li>
-          <li><a href="" aria-label="клиент брэнд"></a></li>
-          <li><a href="" aria-label="клиент компани таг лайн"></a></li>
+          <li><a href="#" aria-label="клиент я и ко"></a></li>
+          <li><a href="#" aria-label="клиент компани таглайн хиа"></a></li>
+          <li><a href="#" aria-label="клиент компани"></a></li>
+          <li><a href="#" aria-label="клиент фостер петерс"></a></li>
+          <li><a href="#" aria-label="клиент брэнд"></a></li>
+          <li><a href="#" aria-label="клиент компани таг лайн"></a></li>
         </ul>
       </section>
     </main>
