--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     <!-- Шапка -->
     <header>
       <nav>
+        <a href="./index.html"><span lang="en">Web Studio</span></a>
         <ul>
-          <li>
-            <a href="./index.html"><span lang="en">Web Studio</span></a>
-          </li>
           <li><a href="#"></a>Студия</li>
           <li><a href="#"></a>Портфолио</li>
           <li><a href="#"></a>Контакты</li>
@@ -25,6 +23,8 @@
         </ul>
       </address>
     </header>
+
+    <!-- Главный контейнер -->
     <main>
       <!--Герой-->
       <section>
@@ -34,7 +34,7 @@
 
       <!--Преимущества-->
       <section>
-        <h2>Преимущества</h2>
+        <h2 hidden>Преимущества</h2>
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
@@ -72,33 +72,30 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <a href="#"
-              ><img
-                src="./img/desk.jpg"
-                alt="Десктопные приложения"
-                width="370"
-                height="294"
-            /></a>
+            <img
+              src="./img/desk.jpg"
+              alt="Десктопные приложения"
+              width="370"
+              height="294"
+            />
             <p>Десктопные приложения</p>
           </li>
           <li>
-            <a href="#"
-              ><img
-                src="./img/phone.jpg"
-                alt="Мобильные приложения"
-                width="370"
-                height="294"
-            /></a>
+            <img
+              src="./img/phone.jpg"
+              alt="Мобильные приложения"
+              width="370"
+              height="294"
+            />
             <p>Мобильные приложения</p>
           </li>
           <li>
-            <a href="#"
-              ><img
-                src="./img/disine.jpg"
-                alt="Дизайнерские решения"
-                width="370"
-                height="294"
-            /></a>
+            <img
+              src="./img/disine.jpg"
+              alt="Дизайнерские решения"
+              width="370"
+              height="294"
+            />
             <p>Дизайнерские решения</p>
           </li>
         </ul>
@@ -188,6 +185,7 @@
         </ul>
       </section>
     </main>
+
     <!-- Подвал -->
     <footer>
       <a href="./index.html"><span lang="en">Web Studio</span></a>
