Исправил спан в лого

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Шапка -->
     <header>
       <nav>
-        <a href="./index.html"><span lang="en">Web Studio</span></a>
+        <a href="./index.html" lang="en"><span>Web</span> Studio</a>
         <ul>
           <li><a href="#"></a>Студия</li>
           <li><a href="#"></a>Портфолио</li>
